# mcp-server-remote

./: LICENSE  README.md  README_2.md  pyproject.toml
src/mcp_server_remote/: __init__.py  auth.py  config_default.toml  config_loader.py  server.py  tools.py
src/mcp_server_remote/_vendor/: __init__.py
src/mcp_server_remote/_vendor/toolshape/: README.md  __init__.py  descriptions.py  receipt.py  selftest.py
