# PyPi.org package stuff
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_remote"]

# Config project stuff
[project]
name = "mcp-server-remote"
version = "0.2.0"
description = "MCP server that serves a remote MCP client."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "platformdirs>4.0"
]

[project.urls]
Homepage = "https://github.com/geomux/mcp-server-remote"

[project.scripts]
mcp-server-remote = "mcp_server_remote.server:main"





